--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <header>
-      <h1>Your Name</h1>
+      <h1>S.viniba Arockia Mary</h1>
       <div class="role">Front End Developer</div>
       <p class="bio">I build accessible, pixel-perfect digital experiences for the web.</p>
       
