--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <div class="container">
     <header>
-      <h1>S.viniba Arockia Mary</h1>
-      <div class="role">Front End Developer</div>
-      <p class="bio">I build accessible, pixel-perfect digital experiences for the web.</p>
+      <h1>Viniba Arockia Mary S</h1>
+      <div class="role">Web Developer</div>
+      <p class="bio">devoted to creating user-centered, responsive, and dynamic web experiences.</p>
       
       <div class="nav">
         <a href="#" onclick="showSection('about')" class="active">ABOUT</a>
@@ -30,8 +30,8 @@
           <img src="istockphoto-1450969748-612x612.jpg" alt="Your Name" class="profile-img">
           <div class="profile-text">
             <p>
-              I'm a developer passionate about crafting accessible, pixel-perfect user interfaces that blend thoughtful design with robust engineering.
-              I enjoy creating experiences that are built for performance and usability.
+              With a strong interest in web development, I enjoy creating user-friendly and engaging digital experiences. 
+              I constantly explore new technologies to build efficient, responsive, and intuitive websites.
             </p>
           </div>
         </div>
