--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
 
       <section id="education" class="section">
-        <h2>Education</h2>
+        <h2>edu</h2>
         <p><strong>Bachelor of Technology in Computer Science</strong><br>
         ABC University, 2019 – 2023</p>
         <p><strong>Relevant Courses:</strong> Data Structures, Web Development, Algorithms, Machine Learning</p>
