--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p class="bio">Dedicated to creating user-centered, responsive, and dynamic web experiences.</p>
       
       <div class="nav">
-        <a href="#" onclick="showSection('about')" class="active">ABOUT</a>
-        <a href="#" onclick="showSection('experience')">EXPERIENCE</a>
-        <a href="#" onclick="showSection('projects')">PROJECTS</a>
-        <a href="#" onclick="showSection('education')">EDUCATION</a>
+        <a href="#" onclick="showSection('about')" class="active">🙋 ABOUT</a>
+        <a href="#" onclick="showSection('experience')">💼 EXPERIENCE</a>
+        <a href="#" onclick="showSection('projects')">🛠️ PROJECTS</a>
+        <a href="#" onclick="showSection('education')"> <i class="fas fa-graduation-cap" style="color:#4B9CD3;"></i> EDUCATION</a>
       </div>
     </header>
 
@@ -37,11 +37,28 @@
         </div>
       </section>
 
-      <section id="experience" class="section">
-        <h2>Experience</h2>
-        <p>Currently working as a Front-End Developer at XYZ Corp, building modern web interfaces using React and Tailwind CSS.</p>
-        <p>Previously worked at ABC Inc. where I led front-end efforts for e-commerce projects.</p>
-      </section>
+     <section id="experience" class="section">
+  <h2><i class="fas fa-briefcase"></i> Experience</h2>
+  
+  <div>
+    <h3> 🧑‍💻 <strong>Front-End Developer – Greensoft Groups</strong></h3>
+    <p><strong>2024 – Present</strong></p>
+    <p>Currently working as a Front-End Developer, building modern web interfaces.</p>
+  </div>
+
+  <div>
+    <h3>💻 <strong>Associate Software Developer Trainee – Varnik System Service Pvt. Ltd.</strong></h3>
+    <p><strong>2023 – 2024 (Part-time)</strong></p>
+    <p>Worked as an Associate Software Developer Trainee, contributing to software development tasks and gaining hands-on experience during the time period.</p>
+  </div>
+
+  <div>
+    <h3>🏭 <strong> Machine Operator – Igarashi Motors India Ltd.</strong></h3>
+    <p><strong>2018 – 2021</strong></p>
+    <p>Worked as a Machine Operator based on ITI qualification, operating machinery and ensuring production quality in a manufacturing environment.</p>
+  </div>
+</section>
+
 
       <section id="projects" class="section">
         <h2>Selected Projects</h2>
