--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
 
       <section id="education" class="section">
         <h2>Education</h2>
-        <p><strong><i class="fas fa-check-circle"></i>  Bachelor of Computer Application</strong><br>
+        <p><strong> <span style="font-size: 20px; color: #27AE60;">🧑‍🎓</span> Bachelor of Computer Applications</strong><br>
         St.Antony's College of Arts and Sciences for Women, 2021 – 2024</p>
         
-        <p><strong><i class="fas fa-check-circle"></i> ITI ELECTRICIAN</strong><br>
+        <p><strong><span style="font-size: 20px; color: #27AE60;">🧑‍🎓</span>ITI Electrician</strong><br>
         Government ITI, 2015 – 2017</p>
         <!-- <p><strong>Relevant Courses:</strong> Data Structures, Web Development, Algorithms, Machine Learning</p> -->
-         <p><strong> Expertise:</strong> Angular, HTML, CSS, Java Script.</p>
+         <p><strong> <i style="display:inline-block; width:24px; height:24px; vertical-align:middle;">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="#F1C40F" viewBox="0 0 24 24" width="24" height="24">
+    <path d="M9 21h6v-1H9v1zm3-18C7.92 3 5 6.2 5 10c0 2.72 1.81 5.03 4.32 5.7v3.55h5.36v-3.55c2.51-.67 4.32-2.98 4.32-5.7 0-3.8-2.92-7-6-7zM12 16c-1.65 0-3-1.79-3-4 0-1.32.67-2.62 2-3.32V7c0-.55.45-1 1-1s1 .45 1 1v1.68c1.33.7 2 2 2 3.32 0 2.21-1.35 4-3 4z"/>
+  </svg>
+</i>Expertise:</strong> Angular, HTML, CSS, Java Script.</p>
       </section>
 
       
