--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <section id="about" class="section active">
         <div class="profile-header">
-          <img src="istockphoto-1450969748-612x612.jpg" alt="Your Name" class="profile-img">
+          <img src="my_image.jpeg" alt="Your Name" class="profile-img">
           <div class="profile-text">
             <p>
               With a strong interest in web development, I enjoy creating user-friendly and engaging digital
