Project Link included

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul id="project-list">
             <li><a href="#" class="project-link" data-project="spotify">Spotify Now</a></li>
             <li><a href="#" class="project-link" data-project="portfolio">Portfolio Builder</a></li>
-            <li><a href="#" class="project-link" data-project="uikit">UI Kit</a></li>
+            <li><a href="#" class="project-link" data-project="uikit">Students Details Management System</a></li>
         </ul>
 
         <div id="project-details" style="display: none;">
