--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="container">
-    <header>
+    <header class="fixed-header">
       <h1>Viniba Arockia Mary S</h1>
       <div class="role">Web Developer</div>
       <p class="bio">Dedicated to creating user-centered, responsive, and dynamic web experiences.</p>
@@ -69,9 +69,10 @@
       <section id="projects" class="section">
         <h2>Selected Projects</h2>
         <ul id="project-list">
-            <li><a href="#" class="project-link" data-project="spotify">Spotify Now</a></li>
+            
             <li><a href="#" class="project-link" data-project="portfolio">Portfolio Builder</a></li>
             <li><a href="#" class="project-link" data-project="uikit">Students Details Management System</a></li>
+            <li><a href="#" class="project-link" data-project="spotify">Hummingbird Horizon</a></li>
         </ul>
 
         <div id="project-details" style="display: none;">
