upload calculator project

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <ul id="project-list">
             
             <li><a href="#" class="project-link" data-project="portfolio">Portfolio Builder</a></li>
+            <li><a href="#" class="project-link" data-project="spotify">Simple Web Calculator Using HTML, CSS, and JavaScript</a></li>
             <li><a href="#" class="project-link" data-project="uikit">Students Details Management System</a></li>
-            <li><a href="#" class="project-link" data-project="spotify">Hummingbird Horizon</a></li>
         </ul>
 
         <div id="project-details" style="display: none;">
